--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,43 @@
-<ion-header [translucent]="true">
+
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title>Exercise List</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="goToExerciseList()">
+        <p>Routine</p>
+      </ion-button>
+    </ion-buttons>
+    <ion-searchbar placeholder="Search" (ionInput)="filterExercises($event)"></ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+<ion-content>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12" size-md="3" *ngFor="let exercise of filteredExercises">
+        <ion-card>
+          <ion-img *ngIf="exercise?.image_url; else noImage" [src]="exercise.image_url"></ion-img>
+          <ng-template #noImage>
+            <ion-card-content>Imagen no disponible</ion-card-content>
+          </ng-template>
+          <ion-card-header class="ion-card-header">
+            <ion-card-title>{{ exercise.name }}</ion-card-title>
+            <ion-buttons>
+              <ion-button (click)="openAddExerciseModal(exercise)">
+                <ion-icon name="add"></ion-icon>
+              </ion-button>
+            </ion-buttons>
+          </ion-card-header>
+          <ion-card-content class="card_content">
+            <p> <strong>Equipment: </strong> {{ exercise.equipment ? exercise.equipment : 'No especificado' }}</p>
+            <p> <strong>Body Part: </strong> Part: {{ exercise.bodyPart ? exercise.bodyPart : 'No especificado' }}</p>
+            <p> <strong>Target: </strong> {{ exercise.target ? exercise.target : 'No especificado' }}</p>
+            <div class="boton_detalles">
+              <ion-button (click)="goToDetails(exercise)">More details</ion-button>
+            </div>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
