--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,3 +25,33 @@
 #container a {
   text-decoration: none;
 }
+
+ion-card {
+  margin: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+ion-card-title {
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
+ion-card-content p {
+  font-size: 0.9em;
+  color: #666;
+}
+
+.header-row {
+  display: flex;
+  align-items: center;
+}
+
+ion-title{
+  margin: 10px;
+  margin-top: 15px;
+}
+
+ion-searchbar{
+  margin-bottom: 10px;
+}
+
